<resources>
    <string name="app_name">Project 1</string>
    <string name="player_1_score">Player 1 Score:</string>
    <string name="player_2_score">Player 2 Score:</string>
    <string name="current_player">Current Player:</string>
    <string name="p1">P1</string>
    <string name="_0">0</string>
    <string name="die_face">Die face</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="hold">Hold</string>
    <string name="turn_total">Turn Total:</string>
    <string name="the_winner_is">The Winner Is</string>
    <string name="play_again">Play Again?</string>
</resources>